winning combi in run/...APPLY

--- a/runs/20250821_110628/config.used.json
+++ b/runs/20250821_110628/config.used.json
@@ -1,23 +1,34 @@
 {
-  "train_path": "data/processed/02_train_old25k.json",
-  "val_path": "data/processed/02_test_old25k.json",
+  "train_path": "data/processed/04_train_22-24_midfull_22.json",
+  "val_path": "data/processed/04_test_22-24_midfull_22.json",
   "label_keys": [
     "2_2"
   ],
   "seq_keys": [
     "cumLogVsBuy",
-    "rollVol"
+    "rollVol",
+    "logRet",
+    "drawdown",
+    "runup",
+    "volNormRet"
   ],
   "static_keys": [
     "dailyDrops",
     "buySpread",
     "buyPrice",
     "dropSize",
-    "volatility"
+    "volatility",
+    "tod_sin",
+    "tod_cos",
+    "hist.daily.mean",
+    "hist.daily.vol",
+    "hist.daily.mdd",
+    "hist.weekly.mom",
+    "hist.monthly.mdd"
   ],
   "model_name": "lstm01",
-  "seq_input_size": 2,
-  "static_input_size": 5,
+  "seq_input_size": 6,
+  "static_input_size": 12,
   "lstm_hidden": 64,
   "lstm_layers": 1,
   "bidirectional": false,
@@ -25,8 +36,8 @@
   "dropout": 0.1,
   "num_tasks": 1,
   "loop_name": "standard",
-  "epochs": 200,
-  "patience": 20,
+  "epochs": 20,
+  "patience": 10,
   "batch_size": 128,
   "lr": 0.001,
   "weight_decay": 0.0001,
@@ -35,7 +46,7 @@
   "use_pos_weight": true,
   "pos_weight_cap": null,
   "compute_norms": true,
-  "threshold": 0.65,
-  "run_id": "20250819_132846",
+  "threshold": 0.5,
+  "run_id": "20250821_110628",
   "run_dir": "runs"
 }
