--- a/runs/20250821_101045_check/config.used.json
+++ b/runs/20250821_101045_check/config.used.json
@@ -15,7 +15,7 @@
     "dropSize",
     "volatility"
   ],
-  "model_name": "hybrid01",
+  "model_name": "lstm01",
   "seq_input_size": 2,
   "static_input_size": 5,
   "lstm_hidden": 64,
@@ -25,8 +25,8 @@
   "dropout": 0.1,
   "num_tasks": 1,
   "loop_name": "standard",
-  "epochs": 200,
-  "patience": 20,
+  "epochs": 20,
+  "patience": 10,
   "batch_size": 128,
   "lr": 0.001,
   "weight_decay": 0.0001,
@@ -35,7 +35,7 @@
   "use_pos_weight": true,
   "pos_weight_cap": null,
   "compute_norms": true,
-  "threshold": 0.65,
-  "run_id": "20250819_151910",
+  "threshold": 0.5,
+  "run_id": "20250821_101045",
   "run_dir": "runs"
 }
